# ADT-from-FMI-open-data

./: CMakeLists.txt  README.md  control_update  todo.md  varamain
hosting/: README.md  README.md~  control_update
poco-1.7.3/: CMakeLists.txt  README_poco_in_MLproject2016.md
src/: ADT.cpp  ADT_opettaja.cpp  CMakeLists.txt  HttpKuuntelija.cpp  HttpKuuntelija.cpp~  HttpKuuntelijaleipuri.cpp  XmlLukija.cpp  XmlLukija.cpp~  main.cpp  rajapinnat.cpp  rajapinnat.cpp~
src/headers/: ADT.h  ADT_opettaja.h  HttpKuuntelija.h  HttpKuuntelijaleipuri.h  XmlLukija.h  rajapinnat.h
